<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!--<item-->
            <!--android:id="@+id/nav_contact_us"-->
            <!--android:icon="@drawable/ic_contact_us"-->
            <!--android:title="@string/contact_us" />-->
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
    </group>

    <item android:title="@string/visit_us">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube" />
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_stat_name"
                android:title="@string/website" />
            <item
                android:id="@+id/nav_website_fresh"
                android:icon="@drawable/logo_fresh"
                android:title="@string/fresh_suaka" />
            <item
                android:id="@+id/nav_website_lensa"
                android:icon="@drawable/ic_external_link"
                android:title="@string/website_lensa_suaka" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_about_the_app"
                android:title="Tentang" />
        </menu>
    </item>
</menu>
